# cinema-backend

./: docker-compose.yaml  pyproject.toml
app/: db.py  main.py  minio.py
app/cinema/: models.py
app/cinema/routers/: cinema_router.py  hall_router.py
app/film/: models.py
app/film/routers/: film_router.py  film_screening_router.py
app/utils/: exceptions.py  svg.py
